<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">H2-FruitStore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fruit_list">FruitListActivity</string>
    <string name="main_activity_caption">Main Activity</string>
    <string name="action_new_list">ACTION_NEW_LIST</string>
    <string name="action_print">ACTION_PRINT</string>
    <string name="action_add">ACTION_ADD</string>
    <string name="action_delete_list">ACTION_DELETE_LIST</string>
    <string name="action_delete_first">ACTION_DELETE_FIRST</string>
    <string name="action_delete_last">ACTION_DELETE_LAST</string>
    <string name="action_delete">ACTION_DELETE</string>
    <string name="title_activity_extras_new_fruit_list">ExtrasNewFruitListActivity</string>
    <string name="enter_fruit_name">Enter name of fruit (Apple or Cherry):</string>
    <string name="enter_number_of_fruits">Enter number of fruits:</string>
    <string name="save">Save</string>

</resources>
